--- a/content/blog/2021-09-05-test.md
+++ b/content/blog/2021-09-05-test.md
@@ -2,10 +2,9 @@
 title: test
 date: 2021-09-05T17:01:22.258Z
 description: test
-categories: 
-  - test
+categories: List [ "test", "test2" ]
 tags:
-  - testtest2
+  - List
 autor_dane:
   - body: test
 ---
